--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ deploy:
   bucket: tatu-error-pages
   secret_access_key:
     secure: KGf0MFVfQq8cOAx4DNWmwYPNh3wIWqiStA0zq+OpxFmGurV+mmpkRFFHjo47xipeSLlrM6ep7RaG9cFXA2Y0oFwth27mvY8mxozVzg5ED8SGdGMRcxBt3DXAzg4pwuFJ5AURFtvTvFORT/2fzoLqIT3Bb+ISEsKTtBGmpzVuzUI=
-  accessP_key_id:
-    secure: IkCnx1Vt8hFDE495sgzDLZOSCFUZjiFTYB7tNZtwTkjJWqhoh1TZ76CLru6Y4vR2384kkQfNIBViYPfm0L1haylNiSw5Zpfp0/GGZu7bLyVedTmsWAkks2MKoE2doyuhSpYa2BEtbHCH4fu3/gZxgrp/i+JQy3Pl1iFx09rjXRM=
+  access_key_id:
+    secure: P2A4tcJ5I2ebTr9VOhXOv37SDaJswutWZOsEPho8Q+O1V9yLcXYRqA5mD7kSkIO0qha30K4owTBPfMvkfXUsu0mfX+34fYMt6WmZ/NVRp72jQ34lDoMkhAMPMq0Pd6H+JL4xDxtwhcSV/b7O/pUoDxMZPJapuHVqWMwvngKDuvU=
